// Copyright (c) 2020 Computing Infrastructure Research Centre (CIRC), McMaster
// University. All rights reserved.

syntax = "proto3";
option go_package = "github.com/mcmaster-circ/canids-v2/protocol";

import "google/protobuf/timestamp.proto";

/*
 * CanIDS wire service.
 */
service WireService {
    /*
     * Register endpoint with CanIDS websocket backend.
     */
    rpc Register(RegisterRequest) returns (RegisterResponse);

    /*
     * Upload multiple payloads to CanIDS websocket backend.
     */
    rpc Upload(UploadRequest) returns (UploadResponse);
}

/*
 * Request/response status
 */
enum Status {
    NULL_STATUS = 0;    // Reserved
    REQUEST = 1;        // Send request
    ACK = 2;            // Response ACK
    NACK = 3;           // Response NACK
}

/*
 * Message header
 */
message Header {
    string msg_uuid = 1;                            // Unique message identifier
    google.protobuf.Timestamp msg_timestamp = 2;    // Message timestamp
    Status status = 3;                              // Status of request/response
    string error_msg = 4;                           // Request error message(s) (use with NACK)
    string session = 5;                             // Connection session UUID
}

/* Register request */
message RegisterRequest {
    Header header = 1;  // Header
}

/* Register response */
message RegisterResponse {
    Header header = 1;  // Header

    int32 timeout = 2;  // Server timeout duration
}

/* Upload request */
message UploadRequest {
    Header header = 1;          // Header

    string asset_id = 2;        // Asset identifier
    string file_name = 3;       // Name of file payload is from

    repeated bytes payload = 4; // Multiple JSON byte lines from Zeek
}

/* Upload response */
message UploadResponse {
    Header header = 1;  // Header
}
